--- a/docApp/stylesheets/main.scss
+++ b/docApp/stylesheets/main.scss
@@ -4,6 +4,12 @@
 @import 'quickStart';
 @import 'normalize';
 
+$lightB: #ACF0F2;
+$blue: #1695A3;
+$darkB: #225378;
+$yellow: #F3FFE2;
+$orange: #EB7F00;
+
 html, body {
   height: 100%;
   font-family: 'Open Sans', sans-serif;
