--- a/docApp/stylesheets/main.scss
+++ b/docApp/stylesheets/main.scss
@@ -26,7 +26,7 @@ header, main, footer {
     padding-left: 0;
   }
 }
-h1 {
+h1, h4 {
   padding-top: 70px;
   padding-left: 300px;
   text-align: center;
@@ -39,6 +39,7 @@ h1 {
   text-align: center;
   padding:0px;
   margin:40px 0 40px 0;
+  color: $darkB;
 }
 a {
   text-decoration: none;
@@ -50,9 +51,12 @@ ul {
 .component {
   padding-top: 30px;
   padding-left: 300px;
+  overflow-y: auto;
 }
 .text{
   margin: 0 100px;
+  line-height: 27px;
+  font-size: 1.05em;
 }
 
 .inlinecode{
@@ -73,4 +77,7 @@ h3{
 .codeimg{
   margin: 5% auto;
   margin-bottom: 0;
+}
+.home-heading {
+  color: $yellow;
 }
